--- a/source/makefile
+++ b/source/makefile
@@ -1,15 +1,6 @@
 
 httpd.js: \
-	1-top.js  \
-	2-httpserver.js \
-	3-connection.js \
-	4-request.js \
-	5-utils.js \
-	6-server.js \
-	7-response.js \
-	8-headers.js \
-	9-request.js 
-	cat \
+	0-head.js \
 	1-top.js  \
 	2-httpserver.js \
 	3-connection.js \
@@ -19,6 +10,19 @@ httpd.js: \
 	7-response.js \
 	8-headers.js \
 	9-request.js \
+	0-tail.js 
+	cat \
+	0-head.js \
+	1-top.js  \
+	2-httpserver.js \
+	3-connection.js \
+	4-request.js \
+	5-utils.js \
+	6-server.js \
+	7-response.js \
+	8-headers.js \
+	9-request.js \
+	0-tail.js \
 	> httpd.js
 doc: httpd.js
 	jsdoc httpd.js
